package app.controllers;

public class MaterialController
{

    public void addRoutes()
    {
    }
}
