package app.entities;

public class Carport
{
}
