package app.entities;

public class Material
{
    private int materialID;
    private String materialName;
    private String description;
    private int purchasePrice;
    private String unit;
    private int quantity;
    private int length;
    private int height;
    private int width;
    private boolean hasShedAddons;
    public int getNumbersOfShedAddons;
}
