package app.entities;

public class Roof
{
    private int roofLength;
    private int roofWidth;
    private final RoofType type;
}
