package app.entities;

public enum RoofType
{
    FLAT;
    PITCHED;
}
