package app.persistence;

public class AccountController
{
    public void addRoutes()
    {
    }

    private User login(){
        return null;
    }

    private void logout()
    {

    }
}
