package app.persistence;

public class AccountMapper
{
    public void addAccount(){}
    public void deleteAccount(Account account){}
    public void updateAccount(Account account){}
    public Account getAccountByID(Account account){}
    public List<Account>getAllAccounts(Account account){}
    public void login(){}
}
