package app.persistence;

public class OrderMapper
{
    public Order getOrder(){}
    public List<Order>getOrders(){}
    public void deleteOrderByID(){}
    public void updateOrderByUserID(){}
    public void addOrderToDB(){}
}
