package app.utilities;

public class SVG
{
    private StringBuilder svg;
    public SVG(){}
    public addRectangle(){}
    public addLine(){}
    public addArrow(){}
    public addText(){}
    public addSvg(){}
    @Override
    public toString(){}
}
