package app.utilities;

public class SendGrid
{
    private String API_KEY;
    private String salespersonEmail;
    private String customerEmail;
    private String adminEmail;
    private String subjectLine;
    private String body;
    public SendGrid(String to,String name,String from){}
}
